[gd_scene format=3 uid="uid://b8xviliclgldr"]

[ext_resource type="Script" uid="uid://d1mvf3yiqpfd4" path="res://scripts/chest.gd" id="1_hnpmi"]
[ext_resource type="Texture2D" uid="uid://d32u1hvarxw8" path="res://player imgs/iron_closed_chest(1).png" id="2_hnpmi"]
[ext_resource type="Texture2D" uid="uid://b5qj3r6piba6b" path="res://player imgs/iron_open_chest(1).png" id="3_ofw7p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sy5e1"]
radius = 6.366667

[sub_resource type="SpriteFrames" id="SpriteFrames_2xyl1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hnpmi")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ofw7p")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gqd3d"]
size = Vector2(72, 67)

[node name="Chest" type="Area2D" unique_id=1329740356]
collision_layer = 2
script = ExtResource("1_hnpmi")
min_money = 1500

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=972433500]
scale = Vector2(30, 30)
shape = SubResource("CircleShape2D_sy5e1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1844558327]
texture_filter = 1
scale = Vector2(4.3125, 4.125)
sprite_frames = SubResource("SpriteFrames_2xyl1")
animation = &"closed"

[node name="Label" type="Label" parent="." unique_id=1161149135]
offset_left = -136.0
offset_top = -128.0
offset_right = 47.0
offset_bottom = -51.0
text = "Press E to open chest"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaticBody2D" type="StaticBody2D" parent="." unique_id=1778084858]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" unique_id=184919901]
position = Vector2(-1, 0.5)
shape = SubResource("RectangleShape2D_gqd3d")

[node name="Timer" type="Timer" parent="." unique_id=911136347]
wait_time = 180.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
